# kul

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPEC.md  justfile  package-lock.json  package.json  rustfmt.toml
crates/kul-cli/: Cargo.toml
crates/kul-cli/src/: main.rs
crates/kul-cli/src/commands/: diag.rs  export.rs  format.rs  manifest.rs  mod.rs  project.rs  query.rs  validate.rs
crates/kul-cli/tests/: cli.rs  corpus_contract.rs
crates/kul-cli/tests/snapshots/: cli__export_format_svg_streams_self_contained_svg.snap  cli__query_kin_collateral_human_snapshot.snap  cli__query_kin_composition_json_snapshot.snap  cli__query_kin_cousins_json_snapshot.snap  cli__query_kin_human_snapshot.snap  cli__query_kin_json_snapshot.snap  cli__query_kin_spouses_human_snapshot.snap  cli__query_kin_step_parents_json_snapshot.snap  cli__query_person_human_snapshot.snap  cli__query_person_json_snapshot.snap  cli__query_persons_human_snapshot.snap  cli__query_persons_json_contract_snapshot.snap  cli__query_rel_human_snapshot.snap  corpus_contract__01_nuclear__kin_parents.snap  corpus_contract__01_nuclear__kin_siblings.snap  corpus_contract__01_nuclear__persons_absent_died.snap  corpus_contract__01_nuclear__rel.snap  corpus_contract__02_three_generations__kin_ancestors.snap  corpus_contract__02_three_generations__kin_parents.snap  corpus_contract__02_three_generations__kin_siblings.snap  corpus_contract__02_three_generations__persons_absent_died.snap  corpus_contract__02_three_generations__rel.snap  corpus_contract__03_remarriage__kin_ancestors.snap  corpus_contract__03_remarriage__kin_siblings.snap  corpus_contract__03_remarriage__persons_absent_died.snap  corpus_contract__03_remarriage__rel.snap  corpus_contract__04_adoption__kin_ancestors.snap  corpus_contract__04_adoption__kin_siblings.snap  corpus_contract__04_adoption__persons_absent_died.snap  corpus_contract__04_adoption__rel.snap  corpus_contract__05_cousins__kin_ancestors.snap  corpus_contract__05_cousins__kin_parents.snap  corpus_contract__05_cousins__kin_siblings.snap  corpus_contract__05_cousins__persons_absent_died.snap  corpus_contract__05_cousins__rel.snap  corpus_contract__06_polygamy__kin_ancestors.snap  corpus_contract__06_polygamy__kin_parents.snap  corpus_contract__06_polygamy__kin_siblings.snap  corpus_contract__06_polygamy__persons_absent_died.snap  corpus_contract__06_polygamy__rel.snap  (+11 more)
crates/kul-core/: Cargo.toml
crates/kul-core/src/: ast.rs  cycles.rs  date.rs  diagnostic.rs  export.rs  field_meta.rs  format.rs  lexer.rs  lib.rs  manifest.rs  node_at.rs  parser.rs  query.rs  semantic.rs  span.rs  validator.rs
crates/kul-core/src/export/: cytoscape.rs
crates/kul-core/src/format/: cells.rs  emit.rs  source.rs
crates/kul-core/src/query/: descriptor.rs  engine.rs  filter.rs  junction.rs  pattern.rs  resolve.rs  sugar.rs
crates/kul-core/tests/: export.rs  filter.rs  format.rs  kin.rs  lexer.rs  multi_file.rs  parser.rs  perf.rs  query.rs  resolve.rs  validator.rs
crates/kul-core/tests/common/: mod.rs
crates/kul-core/tests/snapshots/: export__declaration_order_is_preserved_across_files_in_lexicographic_order.snap  export__example_01_nuclear_family.snap  export__example_01_nuclear_family_cytoscape.snap  export__example_01_nuclear_family_with_positions.snap  export__example_01_single_couple.snap  export__example_01_single_couple_cytoscape.snap  export__example_01_single_couple_with_positions.snap  export__example_02_nuclear_family.snap  export__example_02_nuclear_family_cytoscape.snap  export__example_02_nuclear_family_with_positions.snap  export__example_02_three_generations.snap  export__example_02_three_generations_cytoscape.snap  export__example_02_three_generations_with_positions.snap  export__example_03_divorce_and_remarriage.snap  export__example_03_divorce_and_remarriage_cytoscape.snap  export__example_03_divorce_and_remarriage_with_positions.snap  (+174 more)
crates/kul-layout/: Cargo.toml
crates/kul-layout/src/: adapter.rs  lib.rs  metrics.rs  shape.rs  walker.rs
crates/kul-layout/tests/: corpus.rs  regression.rs  walker.rs
crates/kul-loader/: Cargo.toml
crates/kul-loader/src/: lib.rs
crates/kul-loader/tests/: loader.rs
crates/kul-lsp/: Cargo.toml
crates/kul-lsp/src/: convert.rs  lib.rs  main.rs  manifest.rs  server.rs  state.rs
crates/kul-lsp/tests/: code_action.rs  cold_start.rs  completion.rs  definition.rs  diagnostics.rs  document_symbol.rs  export.rs  export_svg.rs  formatting.rs  handshake.rs  hover.rs  multi_file.rs  perf.rs  references.rs  rename.rs  render.rs  semantic_tokens.rs  watched_files.rs
crates/kul-render/: Cargo.toml
crates/kul-render/src/: build.rs  lib.rs  shape.rs
crates/kul-render/tests/: corpus.rs  transform.rs
crates/kul-svg/: Cargo.toml
crates/kul-svg/src/: emit.rs  lib.rs
crates/kul-svg/tests/: corpus.rs  visual.rs
crates/kul-visual/: Cargo.toml
crates/kul-visual/src/: lib.rs
crates/kul-wasm/: Cargo.toml
crates/kul-wasm/src/: lib.rs
crates/kul-wasm/tests/: check.rs  export_graph.rs  format.rs  query.rs  render_svg.rs
crates/kul-wasm/types/: kul_wasm.d.ts
crates/kula-cli/: Cargo.toml
crates/kula-cli/src/: main.rs
crates/kula-cli/tests/: cli.rs
crates/kula-core/: Cargo.toml
crates/kula-core/src/: ast.rs  cycles.rs  date.rs  diagnostic.rs  export.rs  field_meta.rs  format.rs  lexer.rs  lib.rs  node_at.rs  parser.rs  semantic.rs  span.rs  validator.rs
crates/kula-core/tests/: export.rs  format.rs  lexer.rs  parser.rs  validator.rs
crates/kula-lsp/: Cargo.toml
crates/kula-lsp/src/: convert.rs  lib.rs  main.rs  server.rs  state.rs
crates/kula-lsp/tests/: code_action.rs  cold_start.rs  completion.rs  definition.rs  diagnostics.rs  document_symbol.rs  export.rs  formatting.rs  handshake.rs  hover.rs  perf.rs  references.rs  rename.rs  semantic_tokens.rs
crates/kula-wasm/: Cargo.toml
crates/kula-wasm/src/: lib.rs
crates/kula-wasm/tests/: check.rs  export_graph.rs  format.rs
crates/kula-wasm/types/: kula_wasm.d.ts
(+585 files in other folders)
