[workspace]
resolver = "3"
members = [
    "crates/kula-core",
    "crates/kula-cli",
    "crates/kula-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/YashBhalodi/kulalang"
authors = ["YashBhalodi"]
rust-version = "1.85"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
kula-core = { path = "crates/kula-core", version = "0.1.0" }
kula-lsp = { path = "crates/kula-lsp", version = "0.1.0" }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
