[workspace]
resolver = "3"
members = [
    "crates/kul-core",
    "crates/kul-loader",
    "crates/kul-render",
    "crates/kul-layout",
    "crates/kul-svg",
    "crates/kul-cli",
    "crates/kul-lsp",
    "crates/kul-wasm",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/YashBhalodi/kul"
authors = ["YashBhalodi"]
rust-version = "1.85"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
# Default features are disabled at the workspace level so member crates
# can pick what they need. The `yaml` feature (manifest YAML parsing) is
# on by default in `kul-core`, but `kul-wasm` opts out to keep the wasm
# blob lean — a workspace dep with defaults-on would prevent that.
kul-core = { path = "crates/kul-core", version = "0.3.2", default-features = false }
kul-loader = { path = "crates/kul-loader", version = "0.3.2" }
kul-render = { path = "crates/kul-render", version = "0.3.2" }
kul-layout = { path = "crates/kul-layout", version = "0.3.2" }
kul-svg = { path = "crates/kul-svg", version = "0.3.2" }
kul-lsp = { path = "crates/kul-lsp", version = "0.3.2" }
miette = "7"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tsify = { version = "0.5", default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
