[package]
name = "kul-cli"
description = "Command-line interface for the Kul language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "kul"
path = "src/main.rs"

[dependencies]
kul-core = { workspace = true, features = ["yaml"] }
kul-loader = { workspace = true }
kul-lsp = { workspace = true }
kul-visual = { workspace = true }
clap = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
