[package]
name = "kul-core"
description = "Parser, semantic analyzer, and validator for the Kul language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Derive `tsify::Tsify` on the export-envelope types so the `kul-wasm`
# adapter can emit accurate `.d.ts` files from this Rust source of truth.
# Default-off — the CLI and LSP never pay the cost. See ADR-0012.
tsify = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true, features = ["js"] }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
