[package]
name = "kul-core"
description = "Parser, semantic analyzer, and validator for the Kul language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["yaml"]
# Derive `tsify::Tsify` on the export-envelope types so the `kul-wasm`
# adapter can emit accurate `.d.ts` files from this Rust source of truth.
# Default-off — the CLI and LSP never pay the cost. See ADR-0012.
tsify = ["dep:tsify", "dep:wasm-bindgen"]
# Expose `kul_core::manifest::parse(yaml)`. The CLI and LSP turn the
# on-disk `kul.yml` into a `Manifest` through this seam; the WASM
# adapter receives `Manifest` as a typed JS object and never needs YAML
# — it opts out via `default-features = false` in its Cargo.toml.
yaml = ["dep:serde_norway"]

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
serde_norway = { workspace = true, optional = true }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true, features = ["js"] }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
