[package]
name = "kul-lsp"
description = "Language server for the Kul language (LSP over stdio)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "kul-lsp"
path = "src/main.rs"

[dependencies]
kul-core = { workspace = true, features = ["yaml"] }
kul-loader = { workspace = true }
kul-visual = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
# The perf gate times each pipeline stage (compute / layout / render)
# separately, so it reaches the pinned crates directly rather than through
# the `kul-visual` facade.
kul-render = { workspace = true }
kul-layout = { workspace = true }
kul-svg = { workspace = true }
