[package]
name = "kul-render"
description = "Canonical UI pattern as data: projects the kinship-native ExportEnvelope into a RenderShape that surface renderers can consume"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kul-core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
