[package]
name = "kul-wasm"
description = "WebAssembly bindings for kul-core, packaged as @kullang/wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# wasm-pack invokes a vendored `wasm-opt`; the bundled version predates
# Rust 1.82's switch to bulk-memory ops by default. Pass the feature flag
# explicitly so optimization succeeds regardless of which wasm-opt runs.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
# The JS host hands `Manifest` over via `serde-wasm-bindgen`, so the
# `yaml` feature on `kul-core` (which would pull in `serde_yaml`) is
# intentionally not enabled here — keeps the wasm blob lean.
kul-core = { workspace = true, features = ["tsify"] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tsify = { workspace = true, features = ["js"] }

[dev-dependencies]
insta = { workspace = true }
kul-core = { workspace = true }
serde_json = { workspace = true }
