[package]
name = "kula-wasm"
description = "WebAssembly bindings for kula-core, packaged as @kulalang/wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# wasm-pack invokes a vendored `wasm-opt`; the bundled version predates
# Rust 1.82's switch to bulk-memory ops by default. Pass the feature flag
# explicitly so optimization succeeds regardless of which wasm-opt runs.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
kula-core = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
